--- a/virtio-devices/Cargo.toml
+++ b/virtio-devices/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["The Cloud Hypervisor Authors"]
 edition = "2021"
 
 [features]
-default = []
+default = ["tracing-relative"]
+tracing-relative = ["tracer/tracing-relative"]
 
 [dependencies]
 anyhow = "1.0.79"
@@ -36,3 +37,4 @@ vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic", 
 vm-migration = { path = "../vm-migration" }
 vm-virtio = { path = "../vm-virtio" }
 vmm-sys-util = "0.12.1"
+tracer = { path = "../tracer" }
