--- a/tracer/Cargo.toml
+++ b/tracer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 libc = "0.2.153"
 log = "0.4.20"
+nix = { version = "0.29.0", features = ["time"] }
 once_cell = "1.19.0"
 serde = { version = "1.0.196", features = ["rc", "derive"] }
 serde_json = "1.0.109"
